--- a/package.json
+++ b/package.json
@@ -8,9 +8,7 @@
   "license": "ISC",
   "dependencies": {
     "jquery": "^2.1.4",
-    "promise": "^7.1.1"
-  },
-  "devDependencies": {
+    "promise": "^7.1.1",
     "rsvp": "^3.1.0"
   }
 }
